# linkcache

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
sql/: AllLinks.sql  ChromeBookmarks.sql  ChromeHistory.sql  FirefoxBookmarks.sql  FirefoxHistory.sql
src/: arc.rs  cache.rs  cache_builder.rs  chrome.rs  ddl.rs  error.rs  firefox.rs  lib.rs  link.rs  testutils.rs
src/arc/: browser.rs  mod.rs  sidebar.rs
src/migrations/: 001_CreateLinks.sql  002_CreateLinksFTS.sql
src/queries/: all_firefox_bookmarks.sql  all_firefox_history.sql
test_data/: StorableSidebar.json
test_data/firefox_profile/: profiles.ini
test_data/firefox_profile/test.default/: places.sqlite
tests/: cache_tests.rs  firefox_integration_tests.rs  firefox_tests.rs
