[package]
name = "linkcache"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
image = "0.25"
log = "0.4.20"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"
filetime = "0.2.23"
sublime_fuzzy = "0.7.0"
itertools = "0.13.0"


[dev-dependencies]
tempfile = "3.10.1"
