[package]
name = "linkcache"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Link search utility"

[features]
default = ["lib"]
lib = []
bin = []


[[bin]]
name = "linkcache"
path = "src/bin/linkcache.rs"
required-features = ["bin"]

[dependencies]
dirs = "5"
rusqlite = { version = "0", features = ["bundled", "chrono"] }
image = "0"
log = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
filetime = "0"
sublime_fuzzy = "0"
itertools = "0"
chrono = { version = "0", features = ["serde"] }

# Binary-only dependencies
alfrusco = { version = "0", path = "../alfrusco" }
clap = "4.5"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10.1"
