[package]
name = "linkcache"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Link search utility"

[features]
default = ["lib"]
lib = []
bin = []

[[bin]]
name = "linkcache"
path = "src/bin/linkcache/main.rs"
required-features = ["bin"]

[dependencies]
chrono = { version = "0", features = ["serde"] }
dirs = "6"
filetime = "0"
itertools = "0"
lazy_static = "1"
log = "0"
rusqlite = { version = "0", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
rust-ini = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sublime_fuzzy = "0"
tempfile = "3.10.1"

# Binary-only dependencies
alfrusco = { version = "0", path = "../alfrusco" }
clap = "4.5"
env_logger = "0.11"
